--- a/argocd/apps/angus/resources.yaml
+++ b/argocd/apps/angus/resources.yaml
@@ -1,4 +1,4 @@
-apiVersion: authorization.openshift.io/v1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: event-reader
@@ -11,5 +11,18 @@ rules:
   - get
   - watch
   - list
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: event-reader-binding
+roleRef:
+  kind: ClusterRole
+  name: event-reader
+subjects:
+- kind: ServiceAccount
+  name: eventrouter
+  namespace: openshift-logging
 
 ---
